# text-analysis-pipeline

./: .env.example  Makefile  pyproject.toml
.devcontainer/: devcontainer.json
src/agent/: app.py  configuration.py  graph.py  state.py  workflow.py
src/agent/.streamlit/: secrets.toml
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
