[tool.poetry]
name = "Text Analysis Pipeline"
version = "0.1.0"
description = ""
authors = ["Ahmed <ahmed369ww@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.37"
langchain = "^0.3.3"
langchain-openai = "^0.2.2"
python-dotenv = "^1.0.1"
ipython = "^8.28.0"
langchain-google-genai = "^2.0.1"
langsmith = "^0.1.135"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
